Grader must now provide a reason for rejecting a dispute ...
The reason is sent in a mail to the student

--- a/config/onclick/examiner.yml
+++ b/config/onclick/examiner.yml
@@ -54,9 +54,8 @@ tab-disputes :
     panel : load/dispute?id=:id
 
 lnk-reject-dispute :
-  url: 
-    self : dispute/reject?id=:a
-  update-on: load/dispute
+  show : 
+    modal : m-reject-dispute 
 
 lnk-accept-dispute :
   url: 
