--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -27,6 +27,7 @@
 #  longitude              :float
 #  authentication_token   :string(255)
 #  login_allowed          :boolean
+#  mimics_admin           :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
