--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -9,6 +9,7 @@
 #  created_at  :datetime
 #  updated_at  :datetime
 #  shell       :boolean         default(FALSE)
+#  phone       :string(15)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
