Corrections in behaviour of grading panel preparation ...
1. Rubric should be loaded when exam is selected
2. Tab behaviour should be captured in examiner.yml - not uni.yml
3. Apply .precious on elements that need to be preserved as-is on tab reload
   - like the criteria list of a rubric for an exam

--- a/config/onclick/examiner.yml
+++ b/config/onclick/examiner.yml
@@ -228,3 +228,23 @@ btn-upload-video-solution :
 lnk-add-examiner : 
   show : 
     modal : m-new-examiner
+
+tab-grade-1 :
+  url : 
+    self : exams/pending
+    panel : load/rubric/for?e=:id
+  autoclick :
+    tab : tab-grade-2
+
+tab-grade-2 :
+  prev : tab-grade-1
+  url :
+    self : grade/pending?id=:prev
+  autoclick :
+    tab : tab-grade-3
+
+tab-grade-3 : 
+  prev : tab-grade-1
+  id : tab-grade-2
+  url : 
+    self : scans/pending?q=:id&e=:prev
