Temp commit for puzzle / problem of the day support ...
Do ** not ** revert to this commit

--- a/config/onclick/admin.yml
+++ b/config/onclick/admin.yml
@@ -80,3 +80,7 @@ tab-mng-topics-2 :
   url : 
     self : vertical/topics?id=:prev&context=edit
   prev : tab-mng-topics-1
+
+lnk-add-puzzle : 
+  show : 
+    modal : m-new-puzzle
