--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -10,6 +10,7 @@
 #  updated_at  :datetime
 #  shell       :boolean         default(FALSE)
 #  phone       :string(15)
+#  indie       :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
