Tracking number of codices within Question

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -18,6 +18,8 @@
 #  auditor         :integer
 #  audited_on      :datetime
 #  available       :boolean         default(TRUE)
+#  n_codices       :integer         default(0)
+#  codices         :string(5)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
