--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -11,6 +11,7 @@
 #  shell       :boolean         default(FALSE)
 #  phone       :string(15)
 #  indie       :boolean
+#  gredits     :integer         default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
