Added a new column - mobile - to track device & OS version

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -29,6 +29,7 @@
 #  login_allowed          :boolean
 #  mimics_admin           :boolean         default(FALSE)
 #  phone                  :string(15)
+#  mobile                 :string(255)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
