Changed the landing page to emphasize mobile app

--- a/config/onclick/student.yml
+++ b/config/onclick/student.yml
@@ -35,7 +35,7 @@
 ## Students 
 ##############################################################################
 
-a-daily-puzzle : 
+a-mobile-intro :
   show : 
     superwide: superwide-1
   default : true
