a-grade-stabs -> a-indie-main
Also, doubts are the first thing shown to examiners on login.
Its more likely that we will get student doubts than stabs at our questions.

--- a/config/onclick/examiner.yml
+++ b/config/onclick/examiner.yml
@@ -36,13 +36,13 @@
 ## Admin / Examiner specific  
 ##############################################################################
 
-a-grade-stabs : 
+a-indie-main :
   default : true 
   show : 
     left : left-12 
     wide : wide-Y 
   autoclick : 
-    tab : tab-stabs-1
+    tab : tab-doubts-1
 
 a-grade-exams :
   show : 
