initial commit xml qsn dload and sync

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -20,6 +20,7 @@
 #  available       :boolean         default(TRUE)
 #  n_codices       :integer         default(0)
 #  codices         :string(5)
+#  package_id      :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
