--- a/test/fixtures/bundles.yml
+++ b/test/fixtures/bundles.yml
@@ -6,6 +6,7 @@
 #  uid        :string(50)
 #  created_at :datetime        not null
 #  updated_at :datetime        not null
+#  signature  :string(20)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
