Added flags/columns in Question to track POTD usage ...
POTD (pott-ed) = problem of the day.
We want to keep track of which questions can be POTD and
how many times they have been POTD-ed.

--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -20,6 +20,8 @@
 #  available       :boolean         default(TRUE)
 #  n_codices       :integer         default(0)
 #  codices         :string(5)
+#  potd            :boolean         default(FALSE)
+#  num_potd        :integer         default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
